add coercelong method so primitive values can be used and less objects are created
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/jexl/branches/2.0@587016 13f79535-47bb-0310-9956-ffa450edef68